[package]
name = "harborc"
version = "0.1.0"
edition = "2021"
authors = ["Adam McDaniel"]
license = "Apache-2.0"
description = "A language that ports: targeting your thermostat, UFO, and kitchen sink."
readme = "README.md"
documentation = "https://github.com/adam-mcdaniel/harbor"
homepage = "https://adam-mcdaniel.github.io/harbor"
repository = "https://github.com/adam-mcdaniel/harbor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "harbor"
path = "src/main.rs"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }

[dependencies]
comment = "0.1.1"
lalrpop-util = "0.19"
lalrpop = { version = "0.19", features = ["lexer"] }
clap = "2.33"